way too big, fix

--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@ body {
 
 .title {
   text-align: center;
-  font-size: 200px;
+  font-size: 75px;
 }
